Finish Actuator demo

--- a/01-spring-boot-overview/03-actuator-demo/pom.xml
+++ b/01-spring-boot-overview/03-actuator-demo/pom.xml
@@ -62,6 +62,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+
+		<!--Spring Boot Actuator - exposes health endpoints for us such as /health and /info -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
