Finish Actuator security demo

--- a/01-spring-boot-overview/04-actuator-security-demo/pom.xml
+++ b/01-spring-boot-overview/04-actuator-security-demo/pom.xml
@@ -68,6 +68,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<!-- Spring Security - allows us to add authentication to endpoints -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
