Finish section 3 (add database-related configuration for logging and auto dropping/creating/keeping tables)

--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.datasource.password=springstudent
 
 # Reduce logging level. Set logging level to warn.
 logging.level.root=warn
+
+# Add logging configs to display SQL statements
+logging.level.org.hibernate.SQL=debug
+# See actual values being assigned for these statements
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Configure JPA/Hibernate to automatically drop previous tables and create new ones
+#spring.jpa.hibernate.ddl-auto=create
+
+# This will keep existing data in the table
+spring.jpa.hibernate.ddl-auto=update
