--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/pom.xml
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/pom.xml
@@ -39,9 +39,16 @@
 
 	<dependencies>
 
+		<!-- For the free repository methods (JpaRepository) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- For the free REST endpoints -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 
 		<dependency>
