--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# Spring Data REST properties
+# Set the base URL prefix, example URL: localhost:8080/magic-api/employees
+spring.data.rest.base-path=/magic-api
