Try different REST API configurations

--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=springstudent
 # Spring Data REST properties
 # Set the base URL prefix, example URL: localhost:8080/magic-api/employees
 spring.data.rest.base-path=/magic-api
+# Make page size 20, so for every request, we'll get 20 items back (maximum) per page, such as in GET employees
+spring.data.rest.default-page-size=20
