--- a/04-spring-boot-rest-crud/05-openapi-swagger-starter-projects-spring-data-jpa/pom.xml
+++ b/04-spring-boot-rest-crud/05-openapi-swagger-starter-projects-spring-data-jpa/pom.xml
@@ -39,6 +39,13 @@
 
 	<dependencies>
 
+		<!--Spring Doc dependency for Swagger/OpenAPI documentation of our REST API-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
