--- a/04-spring-boot-rest-crud/05-openapi-swagger-starter-projects-spring-data-jpa/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/05-openapi-swagger-starter-projects-spring-data-jpa/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# Configure custom path for Swagger UI
+#springdoc.swagger-ui.path=/my-ui.html
+
+# Configure custom path for API documentation
+#springdoc.api-docs.path=/my-api-docs
