--- a/04-spring-boot-rest-crud/06-openapi-swagger-starter-projects-spring-data-rest/pom.xml
+++ b/04-spring-boot-rest-crud/06-openapi-swagger-starter-projects-spring-data-rest/pom.xml
@@ -17,7 +17,14 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		
+
+		<!--Add Spring Doc dependency for Swagger documentation of REST API-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
 		<!-- Add dependency for Spring Data REST -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
