Add favorite programming language and favorite sandwich ingredients to the student and form

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=thymeleafdemo
 
 countries=United States,Brazil,France,Germany,India,Mexico,Spain,Colombia
+languages=Java,JavaScript,TypeScript,Python,Rust,C++
+sandwich_ingredients=Onion,Cheese,Ham,Olives,Banana Peppers,Pickles,Lettuce,Tomato,Salt,Peppers,Jalapeños
