--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=demosecurity
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# log JDBC SQL statements
+# Do NOT use in production since it logs user names
+logging.level.org.springframework.jdbc.core=TRACE
