--- a/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni-directional/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni-directional/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=jpamappingsdemo
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-01-one-to-one-uni
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Reduce logging level
+logging.level.root=warn
+
+# JPA/Hibernate logging:
+
+# log SQL statements
+logging.level.org.hibernate.SQL=trace
+
+# log values of SQL statements
+logging.level.org.hibernate.orm.jdbc.bind=trace
