--- a/09-spring-boot-jpa-advanced-mappings/05-jpa-many-to-many/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/05-jpa-many-to-many/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=jpamappingsdemo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hb-04-one-to-many-uni
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-05-many-to-many
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
@@ -8,7 +8,6 @@ spring.datasource.password=springstudent
 logging.level.root=warn
 
 # JPA/Hibernate logging:
-
 # log SQL statements
 logging.level.org.hibernate.SQL=trace
 
