Use @Order to specify the order in which aspect classes execute

--- a/10-spring-boot-aop/02-spring-boot-aop-pointcut-declarations/src/main/resources/application.properties
+++ b/10-spring-boot-aop/02-spring-boot-aop-pointcut-declarations/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=aopdemo
 
 # Reduce logging level to warn
 logging.level.root = warn
+
+# Enable debug logging for AOP
+logging.level.org.springframework.aop=DEBUG
